# Songs_Downloder

./: .env.example  .gitignore  .slugignore  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT_OPTIONS.md  Procfile  README.md  justfile  pre_push.py  pyproject.toml  test_api_url.py
backend/: .gitignore  .slugignore  Procfile  README.md  SELENIUM_SUGGESTIONS_README.md  api.py  api_metadata_enricher.py  app.py  config.py  enrich_metadata.py  fix_album_art.py  infor.txt  jiosaavn_search.py  jiosaavn_selenium_suggestions.py  jiosaavn_suggestions_simple.py  picard_fallback_enricher.old.py  picard_fallback_enricher.py  pre_push_backend.py  pyproject.toml  requirements copy.txt  requirements.txt  simple_ytdlp_example.py  soundcloud.py  state.py  test_config.py  test_picard_enrichment_only.py  test_spoflac_endpoint.py  test_suggestions_integration.py  test_ytdlp_endpoint.py  video_proxy.py  web_main.py  ytmusic_dynamic_tokens.py  ytmusic_dynamic_video_tokens.py  ytmusic_video_search.py
backend/beta_verion/: .gitignore  __init__.py  config.py  convert_audio.py  example.py  main.py  test_installation.py
backend/beta_verion/modules/: amazon.py  metadata.py  songlink.py  spotdl.py  spotify.py  tidal.py
backend/core/: config.py  state.py
backend/integrations/: __init__.py  jiosaavn_search.py  jiosaavn_suggestions_simple.py  soundcloud.py  soundcloud_dynamic_api.py  video_proxy.py  ytmusic_api_request.py  ytmusic_dynamic_tokens.py  ytmusic_dynamic_video_tokens.py  ytmusic_video_search.py
backend/lang_detect/: batch2.py  batch3.py  both.py
backend/new/: FEATURES.md  QUICKSTART.md  README.md  convert_audio.py  example.py  main.py  test_installation.py
backend/routes/: __init__.py  download.py  flac_download.py  preview.py  proxy.py  search.py  ytdlp_test.py
backend/scripts/: pre_push_backend.py
backend/services/: api_metadata_enricher.py  downloader.py  post_download_enricher.py  preview.py
backend/spoflac_core/: config.py  convert_audio.py  main.py
backend/tools/: enrich_metadata.py  fix_album_art.py  picard_fallback_enricher.py
backend/utils/: image.py  shared_api_client.py  url_utils.py
(+195 files in other folders)
