[project]
name = "universal-music-downloader"
version = "1.0.0"
description = "Universal Music Downloader backend"
requires-python = ">=3.12.9,<=3.12.12"
dependencies = [
    "Flask>=3.0.0",
    "Flask-CORS>=4.0.0",
    "gunicorn>=21.2.0",
    "yt-dlp>=2024.8.6",
    "free-proxy>=1.1.2",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "beautifulsoup4>=4.12.2",
    "lxml>=4.9.0",
    "selectolax>=0.3.21",
    "mutagen>=1.47.0",
    "pyotp>=2.9.0",
    "Pillow>=10.0.0",
    "click>=8.1.7",
    "tqdm>=4.66.0",
    "ffmpeg-python>=0.2.0",
    "aksharamukha",
    "langdetect",
    "musicbrainzngs>=0.7.0",
    "pyacoustid>=1.3.0",
]

[project.scripts]
app = "backend.app:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["backend/src"]
include = ["backend*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.black]
target-version = ["py312"]
line-length = 100

[tool.uv]
package = true
